crates/lexeme/tests/ui/invalid_variant_attr.stderr
error: regex parse error:
           *
           ^
       error: repetition operator missing expression
 --> tests/ui/invalid_variant_attr.rs:5:14
  |
5 |     #[lexeme("*")]
  |              ^^^
