crates/lexeme/tests/ui/invalid_variant_attr.rs
use lexeme::Lexeme;

#[derive(Lexeme)]
pub enum Token {
    #[lexeme("*")]
    Ident,
}

fn main() {}
